[java] Use read directly with java rather than using commons io in file tool